# CASInput

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: Lexer.cpp  Lexer.h  Token.cpp  Token.h
src/Exeptions/: BaseError.h  Errors.h  InputError.h  TokenError.h
tests/: LexerTests.cpp
